--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Portofolio - L.M fikriadi </title>
+        <title>Portofolio - ahmad </title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Template by CocoBasic" />
         <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -58,7 +58,7 @@
                         <div class="my-info-wrapper">
                             <div class="my-info">
                                 <p class="my-info-title">NAMA</p>
-                                <p class="my-info-content">L.M fikriadi</p>
+                                <p class="my-info-content">ahmad</p>
                             </div>
 
                             <div class="my-info">
@@ -68,7 +68,7 @@
 
                             <div class="my-info">
                                 <p class="my-info-title">EMAIL</p>
-                                <p class="my-info-content">fikricazstello0@gmail.com</p>
+                                <p class="my-info-content">cazstel0@gmail.com</p>
                             </div>
 
                             <div class="my-info">
